<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LunchDash</string>
    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="message_hint">Write a message...</string>
    <string name="send">Send</string>
    <string name="title_activity_restaurant_search">RestaurantSearchActivity</string>
    <string name="hint_restaurant_search">Search for...</string>
    <string name="filter_options_title">Filter Options</string>
    <string name="label_ok">OK</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_sort_by">Sort By:</string>
    <string name="label_max_distance">Max Distance:</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="facebook_app_id">1377438069243529</string>
    <string name="title_facebook_login">Facebook Connect</string>
    <string name="get_started">To get started, log in using Facebook</string>
    <string name="RestaurantSelected">RestaurantSelected</string>
    <string name="title_activity_wait">WaitActivity</string>
    <string name="WaitingMessage">Finding you a lunch companion!\n\n Please wait...</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="title_activity_accept_decline">AcceptDeclineActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="profile_me">My Profile Pic</string>
    <string name="profile_other">Other profile pic</string>
    <string name="submit_selection">Submit Restaurant Selection</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chatEmptyListMessage">This is your first Message, Make an impression!</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
